--- a/2020-21-2/webeng1/issue-tracker-app/src/app/issue-list/issue-list.component.html
+++ b/2020-21-2/webeng1/issue-tracker-app/src/app/issue-list/issue-list.component.html
@@ -16,8 +16,8 @@
         [class.list-group-item-warning]="issue.status === 'DOING'"
         [class.list-group-item-success]="issue.status === 'DONE'"
         (click)="selectedIssue = issue"
+        [routerLink]="['/issues', issue.id]"
       >
-        <!-- routerLink="/issues/1" -->
         <div class="d-flex w-100 justify-content-between align-items-center">
           <h5 class="mb-1">{{ issue.title }}</h5>
           <span
