--- a/2020-21-2/webeng2/issue-tracker-app/src/app/issue-edit/issue-edit.component.html
+++ b/2020-21-2/webeng2/issue-tracker-app/src/app/issue-edit/issue-edit.component.html
@@ -1,3 +1,5 @@
-<h2 class="display-2 my-3">New issue</h2>
+<div class="container">
+  <h2 class="display-2 my-3">{{ issue.id ? "Edit issue" : "New issue" }}</h2>
 
-<app-issue-form></app-issue-form>
+  <app-issue-form [issue]="issue" (save)="handleSave($event)"></app-issue-form>
+</div>
