--- a/2020-21-2/webeng2/issue-tracker-app/src/app/app.component.html
+++ b/2020-21-2/webeng2/issue-tracker-app/src/app/app.component.html
@@ -14,12 +14,21 @@
   </button>
 
   <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto" *ngIf="authService.isLoggedIn">
       <li class="nav-item">
         <a class="nav-link" routerLink="/issues" (click)="isMenuCollapsed = true">List issues</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/issues/new" (click)="isMenuCollapsed = true">New issue</a>
+      </li>
+      <li class="nav-item">
+        <button class="btn btn-link nav-link" (click)="logout()">Logout</button>
+      </li>
+    </ul>
+    <span class="navbar-text" *ngIf="authService.isLoggedIn"> Hello, {{ authService.user.name }}! </span>
+    <ul class="navbar-nav mr-auto" *ngIf="!authService.isLoggedIn">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login">Login</a>
       </li>
     </ul>
   </div>
