--- a/2021-22-2/webeng2/issue-tracker-app/src/app/issue-form/issue-form.component.html
+++ b/2021-22-2/webeng2/issue-tracker-app/src/app/issue-form/issue-form.component.html
@@ -1,41 +1,43 @@
 <!-- issue form -->
-<h2 class="display-2 my-3">New issue</h2>
-<form action="" novalidate>
+<!-- <h2 class="display-2 my-3">New issue</h2> -->
+{{ issue | json }}
+{{ issueForm.value | json }}
+<form [formGroup]="issueForm">
   <div class="form-group">
     <label for="title">Title</label>
     <input
+      formControlName="title"
       type="text"
-      class="form-control is-invalid"
+      class="form-control"
       id="title"
       placeholder="Title"
       required
+      [class.is-invalid]="title && title.invalid && (title.dirty || title.touched)"
+      [class.is-valid]="title && title.valid"
     />
     <div class="invalid-feedback">Please provide a title!</div>
   </div>
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea
-      class="form-control"
-      id="description"
-      rows="5"
-      required
-    ></textarea>
+    <textarea formControlName="description" class="form-control" id="description" rows="5" required></textarea>
     <div class="invalid-feedback">Please provide a description!</div>
   </div>
   <div class="form-group">
     <label for="place">Place</label>
     <input
+      formControlName="place"
       type="text"
       class="form-control"
       id="place"
       placeholder="Place"
       required
+      pattern="PC\d+"
     />
     <div class="invalid-feedback">Please provide a place!</div>
   </div>
   <div class="form-group">
     <label for="status">Status</label>
-    <select class="form-control" id="status" required>
+    <select formControlName="status" class="form-control" id="status" required>
       <option value="NEW">New</option>
       <option value="DOING">Doing</option>
       <option value="DONE">Done</option>
