--- a/2021-22-2/webeng5/issue-tracker-app/src/app/issue-form/issue-form.component.html
+++ b/2021-22-2/webeng5/issue-tracker-app/src/app/issue-form/issue-form.component.html
@@ -2,32 +2,60 @@
 <!-- <h2 class="display-2 my-3">New issue</h2> -->
 {{ issue | json }}
 {{ issueForm.value | json }}
-<form [formGroup]="issueForm">
+<form [formGroup]="issueForm" (ngSubmit)="handleSubmit()">
   <div class="form-group">
     <label for="title">Title</label>
     <input
       formControlName="title"
       type="text"
-      class="form-control is-invalid"
+      class="form-control"
       id="title"
       placeholder="Title"
       required
+      [class.is-invalid]="title.invalid && (title.dirty || title.touched)"
+      [class.is-valid]="title.valid"
     />
     <div class="invalid-feedback">Please provide a title!</div>
   </div>
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea formControlName="description" class="form-control" id="description" rows="5" required></textarea>
+    <textarea
+      formControlName="description"
+      class="form-control"
+      id="description"
+      rows="5"
+      required
+      [class.is-invalid]="description.invalid && (description.dirty || description.touched)"
+      [class.is-valid]="description.valid"
+    ></textarea>
     <div class="invalid-feedback">Please provide a description!</div>
   </div>
   <div class="form-group">
     <label for="place">Place</label>
-    <input formControlName="place" type="text" class="form-control" id="place" placeholder="Place" required />
-    <div class="invalid-feedback">Please provide a place!</div>
+    <input
+      formControlName="place"
+      type="text"
+      class="form-control"
+      id="place"
+      placeholder="Place"
+      required
+      pattern="PC\d+"
+      [class.is-invalid]="place.invalid && (place.dirty || place.touched)"
+      [class.is-valid]="place.valid"
+    />
+    <div class="invalid-feedback" *ngIf="place.invalid && place.errors?.['required']">Please provide a place!</div>
+    <div class="invalid-feedback" *ngIf="place.invalid && place.errors?.['pattern']">Place must start with PC...!</div>
   </div>
   <div class="form-group">
     <label for="status">Status</label>
-    <select formControlName="status" class="form-control" id="status" required>
+    <select
+      formControlName="status"
+      class="form-control"
+      id="status"
+      required
+      [class.is-invalid]="status.invalid && (status.dirty || status.touched)"
+      [class.is-valid]="status.valid"
+    >
       <option value="NEW">New</option>
       <option value="DOING">Doing</option>
       <option value="DONE">Done</option>
@@ -35,5 +63,5 @@
     <div class="invalid-feedback">Please provide a status!</div>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary" [disabled]="issueForm.invalid">Submit</button>
 </form>
