--- a/2021-22-2/webeng1/issue-tracker-app/src/app/nav-bar/nav-bar.component.html
+++ b/2021-22-2/webeng1/issue-tracker-app/src/app/nav-bar/nav-bar.component.html
@@ -14,27 +14,24 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div
-    [ngbCollapse]="isMenuCollapsed"
-    class="collapse navbar-collapse"
-    id="navbarSupportedContent"
-  >
-    <ul class="navbar-nav mr-auto">
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto" *ngIf="authService.isLoggedIn">
       <li class="nav-item">
-        <a
-          class="nav-link"
-          routerLink="/issues"
-          (click)="isMenuCollapsed = true"
-          >List issues</a
-        >
+        <a class="nav-link" routerLink="/issues" (click)="isMenuCollapsed = true">List issues</a>
       </li>
       <li class="nav-item">
-        <a
-          class="nav-link"
-          routerLink="/issues/new"
-          (click)="isMenuCollapsed = true"
-          >New issue</a
-        >
+        <a class="nav-link" routerLink="/issues/new" (click)="isMenuCollapsed = true">New issue</a>
+      </li>
+    </ul>
+    <span class="navbar-text" *ngIf="authService.isLoggedIn"> Hello, {{ authService.user.username }}! </span>
+    <ul class="navbar-nav mr-auto" *ngIf="!authService.isLoggedIn">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav mr-auto" *ngIf="authService.isLoggedIn">
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()">Logout</a>
       </li>
     </ul>
   </div>
