--- a/2021-22-2/webeng5/issue-tracker-app/src/app/nav-bar/nav-bar.component.html
+++ b/2021-22-2/webeng5/issue-tracker-app/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,6 @@
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/" (click)="isMenuCollapsed = true"
-    >Issue tracker</a
-  >
+  <a class="navbar-brand" routerLink="/" (click)="isMenuCollapsed = true">Issue tracker</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -16,27 +14,24 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div
-    [ngbCollapse]="isMenuCollapsed"
-    class="collapse navbar-collapse"
-    id="navbarSupportedContent"
-  >
-    <ul class="navbar-nav mr-auto">
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto" *ngIf="authService.isLoggedIn">
       <li class="nav-item">
-        <a
-          class="nav-link"
-          routerLink="/issues"
-          (click)="isMenuCollapsed = true"
-          >List issues</a
-        >
+        <a class="nav-link" routerLink="/issues" (click)="isMenuCollapsed = true">List issues</a>
       </li>
       <li class="nav-item">
-        <a
-          class="nav-link"
-          routerLink="/issues/new"
-          (click)="isMenuCollapsed = true"
-          >New issue</a
-        >
+        <a class="nav-link" routerLink="/issues/new" (click)="isMenuCollapsed = true">New issue</a>
+      </li>
+    </ul>
+    <span class="navbar-text" *ngIf="authService.isLoggedIn"> Hello, {{ authService.user.username }}! </span>
+    <ul class="navbar-nav mr-auto" *ngIf="!authService.isLoggedIn">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav mr-auto" *ngIf="authService.isLoggedIn">
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()">Logout</a>
       </li>
     </ul>
   </div>
